--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>FlashMail</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/inicioSesion.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
@@ -46,7 +48,7 @@
                           <input type="text" class="form-control" id="name" name="name" placeholder="Apellidos" tabindex="1" required>
                       </div>                         
                       <div class="form-group">
-                          <label class="form-label" for="email">Correo Electrónico:</label>
+                          <label class="form-label" for="email">Correo Electronico:</label>
                           <input type="email" class="form-control" id="email" name="email" placeholder="Correo" tabindex="2" required>
                       </div>                            
                       <div class="form-group">
@@ -72,7 +74,34 @@
     </section>
     
     <footer>
-
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4">
+                    <ul class="text-center">
+                         <li><h5>Integrantes:</h5></li>
+                         <li>Gabriel Ortega</li>
+                         <li>María G. Avendaño</li>
+                         <li>Yonaiker Vásquez.</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="text-center">
+                         <li>
+                             <h5>Universidad Católica Andres Bello</h5>
+                         </li>
+                         <li>Ingeniería en Informática</li>
+                         <li>Cátedra: Ingeniería de Software</li>
+                         <li></li>
+                         <li>Profesor: Carlos Barroeta</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="text-center logoFooter">
+                         <img src="imagenes/logo.png" alt="" width="150">
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
