--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlashMail</title>
+    <title>PediPlus</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/inicioSesion.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/registro.js"></script>
 </head>
 <body>
     <header>
@@ -16,13 +17,13 @@
             </div>
            <form class="form-inline col-md-5 offset-md-3">
               <div class="form-group">
-                <input type="email" class="form-control" id="contraseña" placeholder="Correo">
+                <input type="email" class="form-control" id="correoSesion" placeholder="Correo">
               </div>
               <div class="form-group mx-sm-1">
-                <input type="password" class="form-control" id="correo" placeholder="Contraseña">
+                <input type="password" class="form-control" id="contraseñaSesion" placeholder="Contraseña">
               </div>
               <button type="submit" class="btn btn-start-order boton">Entrar</button>
-        </form>
+           </form>
         </div>
          
        </div>
@@ -38,33 +39,33 @@
           </div>
           <div class="row">
               <div class="col-md-4  offset-md-8">
-                  <form id="contact-form formularioRegistro" class="form" action="#" method="POST" role="form">
+                  <form  action="" onsubmit="return validar();" method ="post">
                       <div class="form-group">
-                          <label class="form-label" for="name">Nombres:</label>
-                          <input type="text" class="form-control" id="name" name="name" placeholder="Nombres" tabindex="1" required>
+                          <label class="form-label" for="nombres">Nombres:</label>
+                          <input type="text" class="form-control" id="nombres" name="name" placeholder="Nombres" tabindex="1" required>
                       </div>    
                       <div class="form-group">
-                          <label class="form-label" for="name">Apellidos:</label>
-                          <input type="text" class="form-control" id="name" name="name" placeholder="Apellidos" tabindex="1" required>
+                          <label class="form-label" for="apellidos">Apellidos:</label>
+                          <input type="text" class="form-control" id="apellidos" name="name" placeholder="Apellidos" tabindex="2" required>
                       </div>                         
                       <div class="form-group">
                           <label class="form-label" for="email">Correo Electronico:</label>
-                          <input type="email" class="form-control" id="email" name="email" placeholder="Correo" tabindex="2" required>
+                          <input type="email" class="form-control" id="email" name="email" placeholder="correo" tabindex="3" required>
                       </div>                            
                       <div class="form-group">
-                          <label class="form-label" for="subject">Fecha de Nacimiento:</label>
-                          <input type="date" class="form-control" id="subject" name="subject" tabindex="3">
+                          <label class="form-label" for="fechaNacimiento">Fecha de Nacimiento:</label>
+                          <input type="date" class="form-control" id="fechaNacimiento" name="fechaNacimiento" tabindex="3" required>
                       </div>   
                       <div class="form-group">
-                          <label class="form-label" for="subject">Contraseña:</label>
-                          <input type="password" class="form-control" id="subject" name="subject" placeholder="Ingrese su contraseña" tabindex="3">
+                          <label class="form-label" for="contraseña">Contraseña:</label>
+                          <input type="password" class="form-control" id="contraseña" name="contraseña" placeholder="Ingrese su contraseña" tabindex="4" required>
                       </div>    
                       <div class="form-group">
-                          <label class="form-label" for="subject">Repite tu contraseña:</label>
-                          <input type="password" class="form-control" id="subject" name="subject" placeholder="Repita su contraseña" tabindex="3">
+                          <label class="form-label" for="repiteContraseña">Repite tu contraseña:</label>
+                          <input type="password" class="form-control" id="repiteContraseña" name="repiteContraseña" placeholder="Repita su contraseña" tabindex="5" required>
                       </div>                      
                       <div class="text-center">
-                          <button type="submit" class="btn btn-start-order boton">Registrarse</button>
+                          <button type="submit"  class="btn boton" >Registrarse</button>
                       </div>
                   </form>
               </div>
@@ -81,16 +82,16 @@
                          <li><h5>Integrantes:</h5></li>
                          <li>Gabriel Ortega</li>
                          <li>María G. Avendaño</li>
-                         <li>Yonaiker Vásquez.</li>
+                         <li>Yonaiker Vázquez.</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="text-center">
                          <li>
-                             <h5>Universidad Católica Andres Bello</h5>
+                             <h5>Universidad Catolica Andres Bello</h5>
                          </li>
-                         <li>Ingeniería en Informática</li>
-                         <li>Cátedra: Ingeniería de Software</li>
+                         <li>Ingeniería en informatica</li>
+                         <li>Catedra: Ingeniería de Software</li>
                          <li></li>
                          <li>Profesor: Carlos Barroeta</li>
                     </ul>
