Corrección de falla de sintaxis e ID'S dentro del formulario de registro de HTML(y arreglo de detalles)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PediPlus</title>
+    <title>FlashMail</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/inicioSesion.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -82,7 +82,7 @@
                          <li><h5>Integrantes:</h5></li>
                          <li>Gabriel Ortega</li>
                          <li>María G. Avendaño</li>
-                         <li>Yonaiker Vázquez.</li>
+                         <li>Yonaiker Vásquez.</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -90,8 +90,8 @@
                          <li>
                              <h5>Universidad Catolica Andres Bello</h5>
                          </li>
-                         <li>Ingeniería en informatica</li>
-                         <li>Catedra: Ingeniería de Software</li>
+                         <li>Ingeniería en informática</li>
+                         <li>Cátedra: Ingeniería de Software</li>
                          <li></li>
                          <li>Profesor: Carlos Barroeta</li>
                     </ul>
